feat: Solved an issue